--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,4 +1,11 @@
 <H2>Spring boot security</H2>
 <a href="http://localhost:8080/api/v1/students/1">Visit Student 1 [ Requires Login]</a>
 <br/><br/><br/><br/>
+
+Management API
+<a href="/management/api/v1/students">Read All Students</a>
+ID:linda
+Pass: password123
+
+
 <a href="http://localhost:8080/logout">logout</a>
